Working training flow

--- a/PrepareBibleExamples.ipynb
+++ b/PrepareBibleExamples.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,46 +68,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "book_verse_spliter = re.compile('\\n{3}')\n",
+    "book_verse_spliter = re.compile('\\n{3}(?=1:1)',flags=re.MULTILINE) #The look ahead makes sure the book starts at chapter 1 verse 1\n",
     "book,verses = book_verse_spliter.split(books[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nThe Second Book of Moses:  Called Exodus'"
+       "'\\nThe Second Book of Moses:  Called Exodus\\n\\n\\n1:1 Now these are the names of the children of Israel, w'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "book"
+    "books[1][:100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1:1 In the beginning God created the heavens and the earth.\\n\\n1:2 And the earth was without form, and'"
+       "'1:1 Now these are the names of the children of Israel, which came\\ninto Egypt; every man and his hous'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,18 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'chapter': '1',\n",
-       " 'text': ' And God saw the light, that it was good: and God divided the light',\n",
-       " 'verse': '4'}"
+       " 'text': ' Now these are the names of the children of Israel, which came',\n",
+       " 'verse': '1'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,57 +173,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "examples= []\n",
-    "\n",
+    "book_id = 0\n",
+    "book_map={}\n",
     "for num,book in enumerate(books):\n",
-    "    try:\n",
-    "        book_name, book_text = book_verse_spliter.split(book)\n",
-    "        book_name = book_name.strip()\n",
-    "        for verse_regex_match in verses_splitter.finditer(book_text):\n",
-    "            example = verse_regex_match.groupdict()\n",
-    "            example.update({\"book\":book_name,\"book_id\":num,\"text\":example[\"text\"].strip()})\n",
-    "            examples.append(example)\n",
-    "    except:\n",
-    "        #Hack, the above only gets us to psalms\n",
-    "        pass"
+    "        splitted  = book_verse_spliter.split(book)\n",
+    "        if len(splitted) >1:\n",
+    "            book_name, book_text = splitted\n",
+    "            book_name = book_name.strip().replace('\\n', ' ')\n",
+    "            if book_name.startswith(\"The \"): #This filters out other junk in the dataset\n",
+    "                for verse_regex_match in verses_splitter.finditer(book_text):\n",
+    "                    example = verse_regex_match.groupdict()\n",
+    "                    example.update({\"book\":book_name,\"book_id\":book_id,\"text\":example[\"text\"].strip()})\n",
+    "                    examples.append(example)\n",
+    "            book_map[book_name] =book_id\n",
+    "            book_id+=1\n",
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'book': 'The First Book of Moses:  Called Genesis',\n",
-       "  'book_id': 0,\n",
-       "  'chapter': '1',\n",
-       "  'text': 'In the beginning God created the heavens and the earth.',\n",
-       "  'verse': '1'},\n",
-       " {'book': 'The First Book of Moses:  Called Genesis',\n",
-       "  'book_id': 0,\n",
-       "  'chapter': '1',\n",
-       "  'text': 'And the earth was without form, and void; and darkness was upon',\n",
-       "  'verse': '2'},\n",
-       " {'book': 'The First Book of Moses:  Called Genesis',\n",
-       "  'book_id': 0,\n",
-       "  'chapter': '1',\n",
-       "  'text': 'And God said, Let there be light: and there was light.',\n",
-       "  'verse': '3'}]"
+       "26566"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "examples[:3]"
+    "len(examples)"
    ]
   },
   {
@@ -235,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "214"
+       "65"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,10 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "pickle.dump(examples,open('./bible_data.pkl','wb'))"
    ]
   },
@@ -281,58 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from preppy import Preppy\n",
-    "class BibPreppy(Preppy):\n",
-    "    '''\n",
-    "    We'll slightly extend to way we right tfrecords to store the id of the book it came from\n",
-    "    '''\n",
-    "    def sequence_to_tf_example(self,sequence,book_id):\n",
-    "        id_list = self.sentance_to_id_list(sequence)\n",
-    "        ex = tf.train.SequenceExample()\n",
-    "        # A non-sequential feature of our example\n",
-    "        sequence_length = len(sequence)\n",
-    "        ex.context.feature[\"length\"].int64_list.value.append(sequence_length)\n",
-    "        ex.context.feature[\"book_id\"].int64_list.value.append(book_id)\n",
-    "        # Feature lists for the two sequential features of our example\n",
-    "        fl_tokens = ex.feature_lists.feature_list[\"tokens\"]\n",
-    "\n",
-    "        for token in id_list:\n",
-    "            fl_tokens.feature.add().int64_list.value.append(token)\n",
-    "\n",
-    "        return ex\n",
-    "    def parse(ex):\n",
-    "        '''\n",
-    "        Explain to TF how to go froma  serialized example back to tensors\n",
-    "        :param ex:\n",
-    "        :return:\n",
-    "        '''\n",
-    "        context_features = {\n",
-    "            \"length\": tf.FixedLenFeature([], dtype=tf.int64),\n",
-    "            \"book_id\": tf.FixedLenFeature([], dtype=tf.int64)\n",
-    "        }\n",
-    "        sequence_features = {\n",
-    "            \"tokens\": tf.FixedLenSequenceFeature([], dtype=tf.int64),\n",
-    "        }\n",
-    "\n",
-    "        # Parse the example (returns a dictionary of tensors)\n",
-    "        context_parsed, sequence_parsed = tf.parse_single_sequence_example(\n",
-    "            serialized=ex,\n",
-    "            context_features=context_features,\n",
-    "            sequence_features=sequence_features\n",
-    "        )\n",
-    "        return {\"seq\":sequence_parsed[\"tokens\"], \"length\": context_parsed[\"length\"], \n",
-    "                \"book_id\": context_parsed[\"book_id\"]}\n",
-    "\n"
+    "from preppy import BibPreppy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,52 +307,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BP.update_reverse_vocab()"
+    "BP.update_reverse_vocab()\n",
+    "BP.book_map.update(book_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "Can't pickle local object 'Preppy.__init__.<locals>.<lambda>'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-77-4334e460b0aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBP\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./preppy.pkl'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: Can't pickle local object 'Preppy.__init__.<locals>.<lambda>'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pickle.dump(BP,open('./preppy.pkl','wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "74"
+       "(74, 66)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(BP.vocab)"
+    "len(BP.vocab),len(BP.book_map)"
    ]
   },
   {
