--- a/PrepareBibleExamples.ipynb
+++ b/PrepareBibleExamples.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "verses_splitter = re.compile('(?P<chapter>\\d+)\\:(?P<verse>\\d+)(?P<text>.+)',flags=re.MULTILINE)"
+    "verses_splitter = re.compile('(?P<chapter>\\d+):(?P<verse>\\d+)(?P<text>.+?)(?=\\d+\\:\\d+)',)"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen = verses_splitter.finditer(verses)"
+    "gen = verses_splitter.finditer(verses.replace(\"\\n\",\"\"))"
    ]
   },
   {
@@ -150,7 +150,7 @@
      "data": {
       "text/plain": [
        "{'chapter': '1',\n",
-       " 'text': ' Now these are the names of the children of Israel, which came',\n",
+       " 'text': ' Now these are the names of the children of Israel, which cameinto Egypt; every man and his household came with Jacob.',\n",
        " 'verse': '1'}"
       ]
      },
@@ -186,7 +186,7 @@
     "            book_name, book_text = splitted\n",
     "            book_name = book_name.strip().replace('\\n', ' ')\n",
     "            if book_name.startswith(\"The \"): #This filters out other junk in the dataset\n",
-    "                for verse_regex_match in verses_splitter.finditer(book_text):\n",
+    "                for verse_regex_match in verses_splitter.finditer(book_text.replace(\"\\n\",\" \")):\n",
     "                    example = verse_regex_match.groupdict()\n",
     "                    example.update({\"book\":book_name,\"book_id\":book_id,\"text\":example[\"text\"].strip()})\n",
     "                    examples.append(example)\n",
@@ -203,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "26566"
+       "27043"
       ]
      },
      "execution_count": 13,
@@ -228,36 +228,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "D = pd.DataFrame(examples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "65"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D.book_id.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pickle\n",
     "pickle.dump(examples,open('./bible_data.pkl','wb'))"
    ]
@@ -271,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,16 +296,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(74, 66)"
+       "(65, 66)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,12 +316,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BP.vocab[\"<START>\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<bound method Preppy.next_value of <preppy.BibPreppy object at 0x7f8edddb22e8>>,\n",
+       "            {' ': 7,\n",
+       "             '!': 57,\n",
+       "             \"'\": 43,\n",
+       "             '(': 60,\n",
+       "             ')': 62,\n",
+       "             ',': 22,\n",
+       "             '-': 63,\n",
+       "             '.': 19,\n",
+       "             ':': 40,\n",
+       "             ';': 36,\n",
+       "             '<EOS>': 2,\n",
+       "             '<PAD>': 0,\n",
+       "             '<START>': 1,\n",
+       "             '?': 38,\n",
+       "             'A': 20,\n",
+       "             'B': 35,\n",
+       "             'C': 48,\n",
+       "             'D': 28,\n",
+       "             'E': 45,\n",
+       "             'F': 30,\n",
+       "             'G': 46,\n",
+       "             'H': 55,\n",
+       "             'I': 41,\n",
+       "             'J': 8,\n",
+       "             'K': 61,\n",
+       "             'L': 25,\n",
+       "             'M': 49,\n",
+       "             'N': 23,\n",
+       "             'O': 26,\n",
+       "             'P': 50,\n",
+       "             'Q': 64,\n",
+       "             'R': 27,\n",
+       "             'S': 13,\n",
+       "             'START': 65,\n",
+       "             'T': 3,\n",
+       "             'U': 56,\n",
+       "             'V': 59,\n",
+       "             'W': 51,\n",
+       "             'Y': 58,\n",
+       "             'Z': 44,\n",
+       "             'a': 11,\n",
+       "             'b': 17,\n",
+       "             'c': 29,\n",
+       "             'd': 12,\n",
+       "             'e': 5,\n",
+       "             'f': 34,\n",
+       "             'g': 32,\n",
+       "             'h': 4,\n",
+       "             'i': 21,\n",
+       "             'j': 54,\n",
+       "             'k': 33,\n",
+       "             'l': 31,\n",
+       "             'm': 10,\n",
+       "             'n': 6,\n",
+       "             'o': 15,\n",
+       "             'p': 16,\n",
+       "             'q': 53,\n",
+       "             'r': 24,\n",
+       "             's': 9,\n",
+       "             't': 14,\n",
+       "             'u': 39,\n",
+       "             'v': 42,\n",
+       "             'w': 37,\n",
+       "             'x': 52,\n",
+       "             'y': 18,\n",
+       "             'z': 47})"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BP.vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "boo"
-   ]
+   "source": []
   }
  ],
  "metadata": {
